canvas now covers the whole window. fixed input/label/for on the checkbuttons
Ignore-this: 973f9bb340a0ef2c28569f55e0abd845

darcs-hash:20120919073537-312f9-a693ade01039b67887f3baa115ba2116670a0a99

--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,15 @@
 body {
     font-family: sans;
     font-size: 11px;
+    margin: 0;
+    height: 100%;
+    overflow-y: hidden;
 }
+
+.ui-mobile, .ui-mobile body {
+    height: initial;
+}
+
 .ctl input {
     width: 300px;
 }
@@ -10,17 +18,8 @@ body > div > table {
 }
 #mapArea {
     background: #dddbf4;
-}
-#mapAreaSize {
-    width: 600px;
-/*    width: 100%;*/
-    height: 600px;
-}
-@media screen and (max-device-width: 480px) {
-    #mapArea {
-	width: 310px;
-	height: 310px;
-    }
+width: 100%;
+height: 100%;
 }
 
 .ui-slider-horizontal {
@@ -56,14 +55,26 @@ body > div > table {
     background: #eee;
     width: 335px;
 }
-
-.xcontrols {
-    float:right;
-}
 table td {
     vertical-align: top;
 }
 
 .mapRefresh {
     font-size: 80%;
+}
+
+
+#scaleArea {
+    position: fixed;
+    left: 20px;
+    top: 20px;
+    width: 220px;
+    height: 220px;
+}
+.controls {
+    background: #8f8f8f;
+    position: absolute;
+    right: 20px;
+    top: 7px;
+    box-shadow: -3px 12px 50px rgba(0, 0, 0, 0.27);
 }
